--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
         "command": "chatgpt.clearHistory",
         "title": "ChatGPT: Clear Conversation History"
       }
-    ]
+    ],
+    "files": [
+      "extension.js",
+      "prompt.json"
+    ]    
   }
 }
 
