--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "chatgpt"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "author": "Ernst van Graan",
   "type": "commonjs",
   "main": "./extension.js",
